--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
           <em>Civil Engineer & Business Development Specialist at <strong>Dogus Industrial Chemicals</strong>.</em>
         </p>
-        <p>I am Fırat Akkus. I am a civil engineer and 24 years oldu. I am currently working as a Business Development Specialist in Ankara. I love Football and reading history books.</p>
+        <p>I am Fırat Akkus. I am a civil engineer and 24 years old. I am currently working as a Business Development Specialist in Ankara. I love Football and reading history books.</p>
       </td>
     </tr>
   </table>
