--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h3>Education</h3>
   <ul>
     <li>Haci Sabanci Primary School</li>
-    <li>Aydinlikevler Anatolian High</li>
+    <li>Aydinlikevler Anatolian High School</li>
     <li>Cankaya University</li>
   </ul>
   <hr>
